--- a/exampleSite/hugo.yaml
+++ b/exampleSite/hugo.yaml
@@ -1,4 +1,4 @@
-baseurl: https://example.com
+baseurl: https://example.com/
 languageCode: en-us
 theme: hugo-theme-stack
 paginate: 3
@@ -19,20 +19,23 @@ languages:
         title: Example Site
         weight: 1
         params:
-            description: Example description
+            sidebar:
+                subtitle: Example description
     zh-cn:
         languageName: 中文
         title: 演示站点
         weight: 2
         params:
-            description: 演示说明
+            sidebar:
+                subtitle: 演示说明
     ar:
         languageName: عربي
         languagedirection: rtl
         title: موقع تجريبي
         weight: 3
         params:
-            description: وصف تجريبي
+            sidebar:
+                subtitle: وصف تجريبي
 
 services:
     # Change it to your Disqus shortname before using
@@ -97,7 +100,7 @@ params:
             repo:
             issueTerm: pathname
             label:
-            theme:        
+            theme:       
 
         remark42:
             host:
@@ -234,6 +237,18 @@ related:
 
 markup:
     goldmark:
+        extensions:
+            passthrough:
+                enable: true
+                delimiters:
+                    block:
+                        - - \[
+                          - \]
+                        - - $$
+                          - $$
+                    inline:
+                        - - \(
+                          - \)
         renderer:
             ## Set to true if you have HTML content inside Markdown
             unsafe: true
